# rust-swift

./: Cargo.toml  Package.swift
.swiftpm/xcode/package.xcworkspace/xcuserdata/artiombukati.xcuserdatad/: UserInterfaceState.xcuserstate
RustShopping.xcframework/: Info.plist
include/: module.modulemap
src/: lib.rs
